# Prepro

./: .gitignore  .gitignore.swp  CMakeLists.txt  README.md  prepro_concepts.pptx  todo.txt
forms/: MainWindow.ui  MainWindow.ui.autosave
include/: HighlightInteractorStyle.h  MainWindow.h  Model.h
src/: HighlightInteractorStyle.cpp  MainWindow.cpp  Model.cpp
